namespace ECSAnimation.Systems
{
    public enum AnimationTriggerNames
    {
        BodyIdle,
        BodyWalk,
        BodyRun,
        BodyCrouch,
        BodyCrouchWalk,
        BodyJump,
        LegsWalk,
        LegsRun,
        LegsIdle,
        LegsCrouch,
        LegsCrouchWalk,
        LegsJump
    }
}

